# farm_project

farm_back/: Readme.md  pyproject.toml
farm_back/farm_base/api/v1/filters/: farm.py
farm_back/farm_base/api/v1/serializers/: farm.py
farm_back/farm_base/api/v1/views/: farm.py
farm_back/farm_base/migrations/: 0002_auto_20230126_2227.py
farm_back/farm_base/models/: farm.py
